0.11.6
  H2Database, unit test for multiple in-memory databases improved, no longer loads sql files as resources (did not work with gradle + java 11)
  JMinorServerKeystore and JMinorClientTruststore renamed to jminor_keystore.jks and jminor_truststore.jks respectively, type changed to pkcs12
  javax.net.ssl.trustStorePassword specified everywhere javax.net.ssl.trustStore is used
  jminor-framework-model no longer depends on jminor-framework-db-local and jminor-framework-db-remote, projects must now explicitly add a runtime dependency for these
  EntityConnectionProvider.setUser() now returns the EntityConnectionProvider instance
  AbstractEntityConnectionProvider constructor no longer takes User parameter, setUser() must be called before connection is requested
  EntityConnectionProvider and subclasses refactored for parameterless instantiation
  RemoteEntityConnectionProvider no longer crashes on parameterless instantiation due to missing configuration parameter
  CONNECTION_VALIDITY_CHECK_TIMEOUT configuration value moved from EntityConnection to DatabaseConnection
  Package org.jminor.common.server renamed to org.jminor.common.remote
  Modules common-server and common-server-http renamed to common-remote and common-remote-http respectively
  Module directories renamed to reflect the above
  EntityConnection.setMethodLogger() and getDatabaseConnection() removed, now only available in LocalEntityConnection
  LocalEntityConnection.getMethodLogger() added
  LocalEntityConnection renamed to DefaultLocalEntityConnection, preparing for LocalEntityConnection interface
  LocalEntityConnection interface added, DefaultLocalEntityConnection now package private
  EntityConnectionProvider generified
  AbstractEntityConnectionProvider.setClientId() bug fixed, did not use parameter, a few methods made final, disconnect() generified