@@ -4926,3 +4926,4 @@
   LocalEntityConnection interface added, DefaultLocalEntityConnection now package private
   EntityConnectionProvider generified
   AbstractEntityConnectionProvider.setClientId() bug fixed, did not use parameter, a few methods made final, disconnect() generified
+  AbstractRemoteEntityConnection.RemoteEntityConnectionHandler.ACTIVE_CONNECTIONS is now a Set
